# hiper-personalizacao-saude

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/: 01-problema.md  02-arquitetura.md  03-trilhas-de-cuidado.md  04-dados-e-conformidade.md  05-estrategia-ia.md  06-mensuracao.md  07-modelo-de-negocio.md  08-integracao-em-producao.md
docs/adr/: 001-lakehouse-vs-warehouse.md  002-fhir-canonico.md  003-ml-classico-para-decisao.md  004-llm-camada-de-texto.md  005-feature-store.md  006-orquestracao-temporal.md  README.md
infra/: architecture-target.md
prototype/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  demo.py  demo.sh  docker-compose.yml  pyproject.toml
prototype/api/: main.py  schemas.py
prototype/genai/: client.py  prompts.py
prototype/ingestion/: generate_data.py
prototype/ml/: features.py  score.py  train.py
prototype/notebooks/: 01-eda-e-treino.ipynb
prototype/orchestration/: decisions.py
prototype/samples/: joao.json  julia.json  maria.json
prototype/tests/: test_api.py  test_genai_fallback.py  test_orchestration.py
