[project]
name = "profectum-hiper-personalizacao"
version = "0.1.0"
description = "Protótipo de plataforma de cuidado hiper personalizado — case AI Engineer Profectum/Unimed"
authors = [
    { name = "Gabriel Ahrends", email = "gabriel.ahrends.andrade@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pandas>=2.2",
    "numpy>=2.1",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "shap>=0.46",
    "joblib>=1.4",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "pyarrow>=17",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
